[Nav] Added fixed position to sticky nav modifier on mobile due to weird compatibility issues associated with the sticky attribute.

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -53,7 +53,10 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        position: relative;
+
+        &--sticky {
+            position: fixed;
+        }
 
         padding: 0;
 
